tests/valid_inputs/assign_right_shift.cpp
// test '>>='

int main() {
	int a = 168;
	return a >>= 2;
}
