tests/invalid_inputs/sema/func_param_name_redef.cpp

void f(int a) {
	int a = 5;
}
